# Nexus

./: .gitignore  ARCHITECTURE.md  LOCALHOST_VERIFICATION_GUIDE.md  PRD.md  Plan.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.test.json
.claude/: settings.local.json
__tests__/: customizable-suggestion-criteria.test.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/routers/: branches.py  execution.py  features.py  plan.py  repos.py  suggestions.py
backend/app/schemas/: branches.py  execution.py  features.py  repos.py
backend/app/services/: analysis_service.py  execution_service.py  github_service.py  graph_cache.py  graph_version_service.py  llm_service.py  placement_service.py  plan_service.py  risk_service.py  simulation_service.py  suggestion_service.py
backend/app/workers/: analysis_worker.py
backend/tests/: conftest.py  test_analysis_service.py  test_analysis_worker.py  test_execution_service.py  test_github_service.py  test_llm_service.py  test_risk_service.py  test_simulation_service.py  test_suggestion_service.py
frontend/: package-lock.json  package.json
supabase/migrations/: 001_initial_schema.sql  002_plan_approval.sql  003_graph_cache_normalized_url.sql  004_drop_strategic_branches.sql  005_graph_snapshots.sql  006_execution_pr_merged.sql  007_plan_conversations.sql  008_feature_edges_analysis_run_id.sql  009_pending_graph_updates.sql  010_plan_feedback.sql
webui/: README.md  index.html  package-lock.json  package.json
(+58 files in other folders)
